--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -10,6 +11,19 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
+}
+
+.cont {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+  padding-left: 200px;
+  padding-right: 200px;
+}
+
+.elem {
+  max-width: 200px;
 }
 
 /* do not edit this footer */
