--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -9,6 +9,7 @@ body {
 
 img {
   width: 600px;
+  padding-top: 100px;
 }
 
 button {
@@ -16,6 +17,8 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 6px 12px 6px 12px;
+  margin-bottom: 130px;
 }
 
 input {
@@ -24,4 +27,44 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+.header {
+  display: flex;
+  flex: 1 0 auto;
+}
+
+.left-links,
+.right-links {
+  list-style-type: none;
+  display: flex;
+  flex: 1 0 auto;
+  padding: 8px;
+  gap: 16px;
+}
+
+a:link{
+  color: gray;
+  text-decoration: none;
+}
+
+.left-links {
+  justify-content: left;
+}
+
+.right-links {
+  justify-content: right;
+}
+
+.footer {
+  display: flex;
+  flex: 1 0 auto;
+  background-color: #eeeeee;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
